# RAG-Pipeline_Using_LangChain

./: README.md  main.py  pyproject.toml  requirements.txt
AdvancedChunking/: semanticchunking.ipynb
DataIngestion/: chromadb.ipynb  databaseparsing.ipynb  datacsvexcelparsing.ipynb  dataingest.ipynb  datajsonparsing.ipynb  dataparsingdoc.ipynb  dataparsingpdf.ipynb  faiss.ipynb  openAiembeddings.ipynb  othervectorstores.ipynb  vectorembeddings.ipynb
DataIngestion/chroma_db/: chroma.sqlite3
DataIngestion/data/databases/: company.db
DataIngestion/data/structured_files/: inventory.xlsx
DataIngestion/data/text_files/: doc_0.txt  doc_1.txt  doc_2.txt
DataIngestion/faiss_index/: index.faiss  index.pkl
Hybrid Search Strategy/: densesparse.ipynb  langchain_rag_dataset.txt  langchain_sample.txt  mmr.ipynb  re-ranking.ipynb
Multimodal RAG/: multimodalrag.ipynb
Query Enhancement/: hyde.ipynb  langchain_crewai_dataset.txt  querydecomposition.ipynb  queryexpansion.ipynb
Query Enhancement/output/langchain/: chroma.sqlite3
Query Enhancement/output/steve_jobs_for_hyde.db/: chroma.sqlite3
